--- a/app.json
+++ b/app.json
@@ -6,7 +6,15 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "splash": {
+      "image": "./assets/splash.png",
+      "backgroundColor": "#5636D3",
+      "resizeMode": "contain"
+    },
+    "icon": "./assets/icon.png",
+    "description": " A React Native app built with Typescript to control your finances",
+    "githubUrl": "https://github.com/RaphaPetrere/gofinance"
   },
   "name": "gofinances"
 }
